WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
66151
Patch to fix non-pthreads GTK build after
r91906
https://bugs.webkit.org/show_bug.cgi?id=66151
Summary
Patch to fix non-pthreads GTK build after r91906
Kalev Lember
Reported
2011-08-12 12:03:29 PDT
r91906
broke the non-pthreads GTK+ build by including a header which doesn't exist. Fix it by including DateMath.h instead of DateMap.h.
Attachments
[GTK] Fix non-pthreads build after r91906.
(1.12 KB, patch)
2011-08-12 12:05 PDT
,
Kalev Lember
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kalev Lember
Comment 1
2011-08-12 12:05:07 PDT
Created
attachment 103786
[details]
[GTK] Fix non-pthreads build after
r91906
.
Dmitry Lomov
Comment 2
2011-08-12 12:55:40 PDT
(In reply to
comment #1
)
> Created an attachment (id=103786) [details] > [GTK] Fix non-pthreads build after
r91906
.
This looks good to me but I am not a reviewer and David is away.
WebKit Review Bot
Comment 3
2011-08-12 15:32:56 PDT
Comment on
attachment 103786
[details]
[GTK] Fix non-pthreads build after
r91906
. Clearing flags on attachment: 103786 Committed
r93004
: <
http://trac.webkit.org/changeset/93004
>
WebKit Review Bot
Comment 4
2011-08-12 15:33:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug