[GTK] Fix non-pthreads build after r91906. https://bugs.webkit.org/show_bug.cgi?id=66151

Patch by Kalev Lember <kalevlember@gmail.com> on 2011-08-12
Reviewed by David Levin.

r91906 broke the non-pthreads GTK+ build by including a header which
doesn't exist. Fix it by including DateMath.h instead of DateMap.h.

* wtf/gtk/ThreadingGtk.cpp:

Canonical link: https://commits.webkit.org/82026@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93004 268f45cc-cd09-0410-ab3c-d52691b4dbfc